razorpay integration for order creation and execution

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MYSQL_HOST = "localhost"
 MYSQL_USER = "root"
 PASSWORD = "password"
 MYSQL_DATABASE = "CDSlite"
+RAZORPAY_API_KEY = "rzp_test_idu4av7m0TTFkt"
+RAZORPAY_API_SECRET = "Wsn0lWwoFG5XhWvgbDlXnhtN"
