--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MYSQL_HOST = "localhost"
 MYSQL_USER = "root"
-PASSWORD = "MannJain1609@"
+PASSWORD = "IBNFOw9082)*(kjnv"
 MYSQL_DATABASE = "CDSlite"
