update user profile

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,74 @@ __pycache__/
     .mr.developer.json
     .mr.developer.pickle
     .mr.de
+
+*.egg-info
+    .installed.cfg
+    .mr.developer.cfg
+    .mr.developer.ini
+    .mr.developer.json
+    .mr.developer.pickle
+    .mr.developer.pyc
+    .mr.developer.pyo
+    .mr.developer.cfg
+    .mr.developer.ini
+    .mr.developer.json
+    .mr.developer.pickle
+    .mr.developer.pyc
+    .mr.developer.pyo
+    .mr.developer.cfg
+    .mr.developer.ini
+    .mr.developer.json
+    .mr.developer.pickle
+    .mr.developer.pyc
+    .mr.developer.pyo
+    .mr.developer.cfg
+    .mr.developer.ini
+    .mr.developer.json
+    .mr.developer.pickle
+    .mr.developer.pyc
+    .mr.developer.pyo
+    .mr.developer.cfg
+    .mr.developer.ini
+    .mr.developer.json
+    .mr.developer.pickle
+    .mr.developer.pyc
+    .mr.developer.pyo
+    .mr.developer.cfg
+    .mr.developer.ini
+    .mr.developer.json
+    .mr.developer.pickle
+    .mr.developer.pyc
+    .mr.developer.pyo
+    .mr.developer.cfg
+    .mr.developer.ini
+    .mr.developer.json
+    .mr.developer.pickle
+    .mr.developer.pyc
+    .mr.developer.pyo
+    .mr.developer.cfg
+    .mr.developer.ini
+    .mr.developer.json
+    .mr.developer.pickle
+    .mr.developer.pyc
+    .mr.developer.pyo
+    .mr.developer.cfg
+    .mr.developer.ini
+    .mr.developer.json
+    .mr.developer.pickle
+    .mr.developer.pyc
+    .mr.developer.pyo
+    .mr.developer.cfg
+    .mr.developer.ini
+    .mr.developer.json
+    .mr.developer.pickle
+    .mr.developer.pyc
+    .mr.developer.pyo
+    .mr.developer.cfg
+    .mr.developer.ini
+    .mr.developer.json
+    .mr.developer.pickle
+    .mr.developer.pyc
+    .mr.developer.pyo
+    .mr.developer.cfg
+    .
