--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MYSQL_HOST = "localhost"
 MYSQL_USER = "root"
-PASSWORD = "*IITian4713#"
+PASSWORD = "MannJain1609@"
 MYSQL_DATABASE = "CDSlite"
 RAZORPAY_API_KEY = "rzp_test_idu4av7m0TTFkt"
 RAZORPAY_API_SECRET = "Wsn0lWwoFG5XhWvgbDlXnhtN"
